<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout_button"
        android:icon="@drawable/ic_baseline_account_circle"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        />
</menu>